adicionado alts nas imagens

--- a/indexdev.html
+++ b/indexdev.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="banner-devteam">
-            <img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617768777859-AGG9EBYKHLYQPZCFG75X/tc.png?format=2500w" alt="">
+            <img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617768777859-AGG9EBYKHLYQPZCFG75X/tc.png?format=2500w" alt="Logo Team Cherry">
         </div>
         <div class="about-team">
             <div class="text-introduct">
@@ -38,17 +38,17 @@
             </div>
             <div class="devs">
                 <div class="dev-1">
-                    <a href="https://en.wikipedia.org/wiki/Ari_Gibson"><img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617957052580-I25KIL1YWVXBJJIRO4QT/new_icons_0000_Layer-3.png?format=750w" alt=""></a>
+                    <a href="https://en.wikipedia.org/wiki/Ari_Gibson"><img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617957052580-I25KIL1YWVXBJJIRO4QT/new_icons_0000_Layer-3.png?format=750w" alt="Dev Ari Gibson"></a>
                     <h3>Ari Gibson</h3>
                     <span class="about-dev">Ari é responsável pelo design do jogo juntamente com William. Ele cria a arte, os ambientes e anima centenas de insetos.</span>
                 </div>
                 <div class="dev-2">
-                    <a href="https://en.wikipedia.org/wiki/William_Pellen"><img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617957040880-V29BY2R0SQMQQVQVDYVP/new_icons_0001_Layer-1.png?format=750w" alt=""></a>
+                    <a href="https://en.wikipedia.org/wiki/William_Pellen"><img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1617957040880-V29BY2R0SQMQQVQVDYVP/new_icons_0001_Layer-1.png?format=750w" alt="Dev William Pellen"></a>
                     <h3>William Pellen</h3>
                     <span class="about-dev">William desenvolve o jogo em conjunto com Ari. Ele cria os inimigos, chefes e o comportamento do jogo em Hollow Knight. Se um inimigo parecer muito difícil ou um desafio intransponível, a culpa é dele!</span>
                 </div>
                 <div class="dev-3">
-                    <img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1618302457475-J64F2Z9T4ZLR0PWTMLEG/icons_0002_1.png?format=750w" alt="">
+                    <img src="https://images.squarespace-cdn.com/content/v1/606d159a953867291018f801/1618302457475-J64F2Z9T4ZLR0PWTMLEG/icons_0002_1.png?format=750w" alt="Dev David Kazi">
                     <h3>David Kazi</h3>
                     <span class="about-dev">Dave era responsável pela direção técnica de Hollow Knight. Ele dividia seu tempo entre fazer o jogo funcionar e consertar as coisas que Ari e William estragavam.</span>
                 </div>
