--- a/indexdlc.html
+++ b/indexdlc.html
@@ -36,7 +36,7 @@
             <div class="cards-dlc">
                 <div class="dlc-card1">
                     <div class="img-dlc"><img
-                            src="https://cdn2.steamgriddb.com/logo/77666beaaa7fd86de9b9373ded05db44.png" alt=""></div>
+                            src="https://cdn2.steamgriddb.com/logo/77666beaaa7fd86de9b9373ded05db44.png" alt="Banner The grimm troupe"></div>
                     <div class="dlc-content">
                         <div class="about-dlc1">
                             <span>Sombras sonham com fogo infinito,
@@ -46,13 +46,13 @@
                             <span class="citacao1">"Acenda a Lanterna do Pesadelo. Invoque a Trupe."</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="">
+                            <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="Imagem Grimm">
                         </div>
                     </div>
                 </div>
                 <div class="dlc-card2">
                     <div class="img-dlc"><img
-                            src="https://cdn2.steamgriddb.com/logo/be50f16b6032a89d69409d29ac0925b1.png" alt=""></div>
+                            src="https://cdn2.steamgriddb.com/logo/be50f16b6032a89d69409d29ac0925b1.png" alt="Imagem Godmaster"></div>
                     <div class="dlc-content">
                         <div class="about-dlc2">
                             <span>Ecos clamam por coroas divinas,
@@ -62,13 +62,13 @@
                             <span class="citacao2">"Ocupe seu lugar entre os deuses."</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://preview.redd.it/part-65-what-are-your-thoughts-on-the-godseeker-v0-6hhxmjj8azo81.png?width=493&format=png&auto=webp&s=b2547b432f3bfe014c51254ab7f8cb3e39b554ad" alt="">
+                            <img src="https://preview.redd.it/part-65-what-are-your-thoughts-on-the-godseeker-v0-6hhxmjj8azo81.png?width=493&format=png&auto=webp&s=b2547b432f3bfe014c51254ab7f8cb3e39b554ad" alt="Imagem buscadora de deuses">
                         </div>
                     </div>
                 </div>
                 <div class="dlc-card3">
                     <div class="img-dlc"><img
-                            src="https://cdn2.steamgriddb.com/logo_thumb/c753a28f7391c0a9b53479292ad688a0.png" alt=""></div>
+                            src="https://cdn2.steamgriddb.com/logo_thumb/c753a28f7391c0a9b53479292ad688a0.png" alt="Banner Hidden Dreams"></div>
                     <div class="dlc-content">
                         <div class="about-dlc3">
                             <span>Os sonhos retornam a Hallownest.
@@ -78,13 +78,13 @@
                             <span class="citacao3">"Descubra segredos adormecidos que ecoam pelos sonhos de Hallownest"</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://cdn.wikimg.net/en/hkwiki/images/e/ee/Seer.png" alt="">
+                            <img src="https://cdn.wikimg.net/en/hkwiki/images/e/ee/Seer.png" alt="Imagem vidente">
                         </div>
                     </div>
                 </div>
                 <div class="dlc-card4">
                     <div class="img-dlc"><img
-                            src="https://cdn2.steamgriddb.com/logo_thumb/ddf4d59e1bdd679742fd56a45d880a1a.png" alt=""></div>
+                            src="https://cdn2.steamgriddb.com/logo_thumb/ddf4d59e1bdd679742fd56a45d880a1a.png" alt="Banner Lifeblood"></div>
                     <div class="dlc-content">
                         <div class="about-dlc4">
                             <span>Sob o gelo da eternidade, pulsa o azul da vida.
@@ -94,7 +94,7 @@
                             <span class="citacao4">"Lifeblood é o sopro azul que mantém Hallownest vivo em meio à ruína."</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://cdn.wikimg.net/en/hkwiki/images/9/96/Joni.png" alt="">
+                            <img src="https://cdn.wikimg.net/en/hkwiki/images/9/96/Joni.png" alt="Imagem Joni">
                         </div>
                     </div>
                 </div>
