--- a/indexhkmaps.html
+++ b/indexhkmaps.html
@@ -45,11 +45,11 @@
                 </div>
             </div>
             <div class="mapa">
-                <img src="imgs/forgottencross.svg" alt="" id="map">
+                <img src="imgs/forgottencross.svg" alt="mapa" id="map">
                 <div class="seta">
-                    <img src="imgs/setaesquerda.svg" alt="" id="setaesquerda" class="setaesquerda"
+                    <img src="imgs/setaesquerda.svg" alt="seta esquerda" id="setaesquerda" class="setaesquerda"
                         onclick="imagemanterior()">
-                    <img src="imgs/setadireita.svg" alt="" id="setadireita" class="setadireita"
+                    <img src="imgs/setadireita.svg" alt="seta direita" id="setadireita" class="setadireita"
                         onclick="passarimagem()">
                 </div>
             </div>
